[package]
name = "pest_ast_generator"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"

[dependencies]
pest_meta = "2.1.1"
from-pest = "0.3.1"
syn = "0.15.36"
quote = "0.6.12"
proc-macro2 = "0.4.30"
snafu = "0.4.1"
pest = "2.1.1"
heck = "0.3.1"

[dev-dependencies]
duct = "0.12.0"
