[package]
name = "pest_ast_generator"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/pest-ast-generator"
readme = "README.md"

[dependencies]
pest_meta = "2.1.1"
from-pest = "0.3.1"
syn = "0.15.36"
quote = "0.6.12"
proc-macro2 = "0.4.30"
snafu = { version = "0.4.1", default-features = false, features = ["rust_1_30"] }
pest = "2.1.1"
heck = "0.3.1"
itertools = "0.7.0"
log = "0.4.6"

[dev-dependencies]
env_logger = "0.6.1"

[workspace]
members = [
    ".",
    "pest-ast-derive",
    "tests/test-package",
]
